# PGN

./: LICENSE  README.md  pyproject.toml
data/: DATA.md  README.md  create_clevr_annotations.py
data/resisc45/: resisc45_json.json
pgn/datamodules/: __init__.py  cifar100_datamodule.py  cifar10_datamodule.py  clevr_count_datamodule.py  dtd_datamodule.py  eurosat_datamodule.py  flowers102_datamodule.py  food101_datamodule.py  oxfordpets_datamodule.py  resisc45_datamodule.py  sun397_datamodule.py  svhn_datamodule.py  ucf101_datamodule.py  utils.py
pgn/datasets/: clevr_count.py  json_dataset.py
pgn/lightning/: dino.py  pgn_clip.py  pgn_dino.py  pgn_vit.py  vit.py
pgn/lr_schedulers/: __init__.py  cosine_with_warmup.py
pgn/pgn_models/: iip.py  pgn_switch.py  resnet.py  tlpgn.py  utils.py
pgn/scripts/pgn_clip/: test_clip_pgn.py  train_clip_pgn.py
pgn/scripts/pgn_visionmodel/: test_visionmodel_pgn.py  train_visionmodel_pgn.py
pretrained_pgns/pgn_clip/cifar10/: pgn_clip_cifar10.pt
pretrained_pgns/pgn_clip/cifar100/: pgn_clip_cifar100.pt
pretrained_pgns/pgn_clip/clevr_count/: pgn_clip_clevr_count.pt
pretrained_pgns/pgn_clip/dtd/: pgn_clip_dtd.pt
pretrained_pgns/pgn_clip/eurosat/: pgn_clip_eurosat.pt
pretrained_pgns/pgn_clip/flowers102/: pgn_clip_flowers102.pt
pretrained_pgns/pgn_clip/food101/: pgn_clip_food101.pt
pretrained_pgns/pgn_clip/oxford_pets/: pgn_clip_oxford_pets.pt
pretrained_pgns/pgn_clip/resisc45/: pgn_clip_resisc45.pt
pretrained_pgns/pgn_clip/sun397/: pgn_clip_sun397.pt
pretrained_pgns/pgn_clip/svhn/: pgn_clip_svhn.pt
(+7 files in other folders)
